--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@
     text-align: center;
 }
 
-nav{
-    display: none;
-}
-
 body{
     display: flex;
     flex-direction: column;
@@ -24,11 +20,21 @@ body{
     gap: 5em;
 }
 
+/* .head .logo{
+    display: none;
+}
+
+.head .hamburger{
+    display: none;
+} */
+
 .sect-1{
-    background-image: linear-gradient(100deg,
+    background-image: url('images/bg-pattern-intro-mobile.svg') , linear-gradient(100deg,
         hsl(13, 100%, 72%),
         hsl(353, 100%, 62%)
     );
+    background-position: center;
+    background-size: 250%;
     height: 75vh;
     border-bottom-left-radius: 70px;
 }
@@ -62,7 +68,7 @@ body{
     margin: 20px;
 }
 
-.sect-1 button{
+.sect-1 .btn{
     background-color: none;
     border: none;
     padding: 15px 30px;
@@ -71,13 +77,13 @@ body{
     font-weight: 600;
 }
 
-.sect-1 button:nth-of-type(1){
+.sect-1 .btn:nth-of-type(1){
     background-color: hsl(0, 0%, 100%);
     color: hsl(356, 100%, 66%);
     cursor: pointer;
 }
 
-.sect-1 button:nth-of-type(2){
+.sect-1 .btn:nth-of-type(2){
     background-color: hsl(2, 100%, 69%);
     color: hsl(0, 0%, 100%);
     border: 1px solid white;
@@ -200,6 +206,24 @@ footer ul a{
     list-style: none;
     text-decoration: none;
     color: hsl(240, 2%, 79%);
+}
+
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    background-color: white;
+}
+
+nav ul{
+    list-style: none;
+}
+
+nav ul a{
+    text-decoration: none;
+
 }
 /*VECCHIO *{
     box-sizing: border-box;
