--- a/style.css
+++ b/style.css
@@ -308,6 +308,10 @@ button, a{
     cursor: pointer;
 }
 
+footer ul{
+    list-style: none;
+}
+
 /* active states */
 .active #hamburger-icon{
     content: url(./images/icon-close.svg);
@@ -319,4 +323,134 @@ button, a{
 
 .open div{
     display: block;
+}
+
+/*LARGE DESKTOP*/
+@media screen and (min-width: 992px){
+/*HEADER SECTION*/
+    header{
+        display: grid;
+        grid-template-columns: 10% 85%;
+        width: 90%;
+        margin: auto;
+    }
+    .head #hamburger-icon{
+        display: none;
+    }
+
+    nav{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background: none;
+        left: 0;
+        margin: auto;
+    }
+
+    .nav-links{
+        display: flex;
+        flex-direction: row;
+        width: 50%;
+    }
+
+    .nav-link .select-btn{
+        margin: 2em;
+    }
+
+    .nav-btns{
+        color: white;
+        cursor: pointer;
+        margin: 30px;
+    }
+
+    .nav-links button{
+        color: white;
+        cursor: pointer;
+    }
+
+    #register-btn{
+        background: white;
+        color: hsl(356, 100%, 66%);
+    }
+
+    #register-btn:hover{
+        background: hsl(356, 100%, 66%);
+        color: white;
+    }
+
+    .divider{
+        display: none;
+    }
+    /*END OF HEADER*/
+    /*SECTION-2*/
+    .sect-2 .wrapper{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .wrapper .info{
+        order: 1;
+    }
+    .wrapper img{
+        order: 2;
+    }
+
+    .sect-2 .info h2 {
+        text-align: left;
+    }
+    .sect-2 p{
+        text-align: left;
+    }
+    /*------*/
+    /*SECTION-3*/
+    .sect-3{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .sect-3 .info{
+        margin-top: 10em;
+    }
+
+    .sect-3 .info h2,
+    .sect-3 p {
+        text-align: left;
+    }
+    /*------*/
+    /*SECTION-4*/
+    .sect-4{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 40px;
+    }
+
+    .sect-4 .info h2,
+    .sect-4 p {
+        text-align: left;
+    }
+    
+    /*----------*/
+    /*FOOTER*/
+    footer{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        text-align: start;
+        height: 40vh;
+    }
+    footer h4,
+    footer li{
+        text-align: start;
+        margin: 10px;
+    }
+    footer h4{
+        margin-bottom: 2em;
+    }
+    footer ul{
+        margin-top: 2em;
+        align-self: flex-start;
+        justify-self: start;
+    }
+    footer img{
+        align-self: flex-start;
+        justify-self: center;
+    }
 }
